[gd_scene load_steps=5 format=3 uid="uid://dwridlla1ven7"]

[ext_resource type="PackedScene" uid="uid://cprcy14k6dh78" path="res://game/scenes/tower/projetiles/bullet.tscn" id="1_vh104"]
[ext_resource type="Script" path="res://bullet_expotion.gd" id="2_pgnjv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kigv1"]
radius = 100.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_k6efw"]
particle_flag_disable_z = true
gravity = Vector3(0, 98, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0

[node name="BulletExpotion" instance=ExtResource("1_vh104")]
position = Vector2(67, 69)
script = ExtResource("2_pgnjv")

[node name="ExplotionArea" type="Area2D" parent="." index="2"]
collision_layer = 4
collision_mask = 24

[node name="ExplotionShape" type="CollisionShape2D" parent="ExplotionArea" index="0"]
shape = SubResource("CircleShape2D_kigv1")

[node name="GPUParticles2D2" type="GPUParticles2D" parent="." index="5"]
emitting = false
process_material = SubResource("ParticleProcessMaterial_k6efw")

[connection signal="area_entered" from="ExplotionArea" to="." method="_on_explotion_area_area_entered"]
